--- a/less/navbar.less
+++ b/less/navbar.less
@@ -119,6 +119,8 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  width: 48px;
+  height: 32px;
   padding: 8px 12px;
   background-color: transparent;
   border: 1px solid #ddd;
